[package]
name = "hermod"
version = "0.2.2"
description = "A fast In-Memory DBMS optimized with AI. Wah-pah."
authors = ["Matteo Minardi <matteo.minardi2014@gmail.com"]
keywords = ["DataBase", "In-Memory"]
repository = "https://github.com/Grokepeer/Hermod"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
serde_json = "1.0"

[workspace]
members = ["."]

[[bin]]
name = "hermod"
path = "src/main.rs"